--- a/fluentd.conf
+++ b/fluentd.conf
@@ -25,6 +25,9 @@
   include_timestamp true
   logstash_format true
   logstash_prefix ammobin-${tag}
+  verify_es_version_at_startup true
+  default_elasticsearch_version 6
+
   <buffer>
     @type file
     path /fluentd/log/buffer
