--- a/fluentd.conf
+++ b/fluentd.conf
@@ -14,6 +14,10 @@
  </parse>
 </source>
 
+<filter **.caddylog.**>
+  @type ua_parser
+</filter>
+
 <match ammobin.**>
   @type elasticsearch
   host "#{ENV['ES_URL']}"
