fix fluent ua filter

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -14,9 +14,9 @@
  </parse>
 </source>
 
-<filter **.caddylog.**>
+<filter ammobin.**>
   @type ua_parser
-  key_name user
+  key_name agent
 </filter>
 
 <match ammobin.**>
