--- a/fluentd.conf
+++ b/fluentd.conf
@@ -33,6 +33,12 @@
   verify_es_version_at_startup true
   default_elasticsearch_version 6
 
+  reload_on_failure true
+  retry_forever
+  retry_wait 30s
+  retry_type periodic
+
+
   <buffer>
     @type file
     path /fluentd/log/buffer
