cleaned up proxy urls so downstream services dont have to be updated

--- a/Caddyfile
+++ b/Caddyfile
@@ -12,10 +12,12 @@ ammobin.ca {
  
   proxy /images images:8080 {
     transparent
+    without /images
   }
  
   proxy /api api:8080 {
     transparent
+    without /api
   }
 
   header / {
