--- a/Caddyfile
+++ b/Caddyfile
@@ -30,7 +30,7 @@ ammobin.ca {
     # Disallow the site to be rendered within a frame (clickjacking protection)
     X-Frame-Options "DENY"
 
-    Content-Security-Policy-Report-Only "default-src 'self';script-src 'self' 'unsafe-inline'; connect-src  'self' api.ammobin.ca;  style-src 'self' 'unsafe-inline';img-src 'self' images.ammobin.ca;  report-uri https://ammobin.report-uri.com/r/d/csp/enforce"
+    Content-Security-Policy-Report-Only "default-src 'self';script-src 'self' 'unsafe-inline'; connect-src  'self';  style-src 'self' 'unsafe-inline';img-src 'self';  report-uri https://ammobin.ca/api/content-security-report-uri
   }
   
   log / /var/log/caddy/ammobin.log "{combined}" {
