--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     networks:
         - front
     links:
-      - client
+        # - client
       - api
       - images
     volumes:
@@ -21,17 +21,17 @@ services:
       - 443:443
       - 7890:7890
     command: --agree --conf  "/etc/Caddyfile"
-  client:
-    image: ammobindotca/ammobin-client:latest
-    restart: always
-    networks:
-        - front
-    deploy:
-      resources:
-        limits:
-          memory: 450M
-    depends_on:
-      - api
+    #  client:
+    # image: ammobindotca/ammobin-client:latest
+    # restart: always
+    #networks:
+    #    - front
+    # deploy:
+    #  resources:
+    #    limits:
+    #      memory: 450M
+    #depends_on:
+    #  - api
   api:
     env_file: .env
     image: ammobindotca/ammobin-api:latest
@@ -88,15 +88,15 @@ services:
         limits:
           memory: 150M
     entrypoint:  /go/bin/imageproxy -cache /tmp/imageproxy  -addr 0.0.0.0:8080  -referrers ammobin.ca
-  goaccess:
-    image: allinurl/goaccess
-    networks:
-        - front
-    volumes:
-      - ./goaccess.conf:/srv/data/goaccess.conf
-      - goaccess-html:/srv/report
-      - caddy-logs:/srv/logs
-    entrypoint: goaccess --no-global-config --config-file=/srv/data/goaccess.conf --ws-url=wss://stats.ammobin.ca --output=/srv/report/index.html --log-file=/srv/logs/ammobin.log --real-time-html
+    # goaccess:
+    #image: allinurl/goaccess
+    #networks:
+    #    - front
+    #volumes:
+    #  - ./goaccess.conf:/srv/data/goaccess.conf
+    #  - goaccess-html:/srv/report
+    #  - caddy-logs:/srv/logs
+    #entrypoint: goaccess --no-global-config --config-file=/srv/data/goaccess.conf --ws-url=wss://stats.ammobin.ca --output=/srv/report/index.html --log-file=/srv/logs/ammobin.log --real-time-html
   rendertron:
     image: ammobindotca/rendertron
     restart: always
