--- a/Caddyfile
+++ b/Caddyfile
@@ -4,7 +4,7 @@ ammobin.ca {
   push
   # disabled proxying to local client:3000
   proxy / https://ammobin.now.sh https://ammobin-client.herokuapp.com https://ammobin.netlify.com https://ammobin.surge.sh {
-    policy random #first
+    policy first
     fail_timeout 1s
     max_fails 5
     try_duration 1s
@@ -32,7 +32,7 @@ ammobin.ca {
     # Disallow the site to be rendered within a frame (clickjacking protection)
     X-Frame-Options "DENY"
 
-    #Content-Security-Policy-Report-Only "default-src 'self';script-src 'self' 'unsafe-inline' https://storage.googleapis.com; connect-src  'self';  style-src 'self' 'unsafe-inline';img-src 'self';  report-uri https://ammobin.ca/api/content-security-report-uri"
+    Content-Security-Policy-Report-Only "default-src 'self';script-src 'self' 'unsafe-inline' https://storage.googleapis.com; connect-src  'self';  style-src 'self' 'unsafe-inline';img-src 'self';  report-uri https://ammobin.ca/api/content-security-report-uri"
   }
   
   log / /var/log/caddy/ammobin.log "{combined}" {
