--- a/fluentd.conf
+++ b/fluentd.conf
@@ -28,7 +28,7 @@
   scheme https
   ssl_version TLSv1_2 
   include_timestamp true
-  logstash_format true
+  index_name ammobin-${tag}.%Y
   logstash_prefix ammobin-${tag}
   verify_es_version_at_startup true
   default_elasticsearch_version 6
