limit chunks to 2mb, should help with timeouts

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -33,6 +33,7 @@
   verify_es_version_at_startup true
   default_elasticsearch_version 6
   reload_on_failure true
+  buffer_chunk_limit 2m
 
   <buffer>
     @type file
