--- a/Caddyfile
+++ b/Caddyfile
@@ -47,6 +47,14 @@ ammobin.ca {
   }
 }
 
+beta.ammobin.ca {
+  cors
+  proxy /api api-reloading:8080 {
+    transparent
+    websocket
+    without /api
+  }
+}
 stats.ammobin.ca {
   tls {%EMAIL%}
   root  /www/goaccess
