--- a/Caddyfile
+++ b/Caddyfile
@@ -40,6 +40,7 @@ ammobin.ca {
     rotate_size 100
     # dont log ip addresses
     ipmask 255.255.0.0 ffff:ffff:ffff:ff00::
+    except /images
   }
 
   errors {
