--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - 7890:7890
     command: --agree --conf  "/etc/Caddyfile"
   client:
-    image: ammobindotca/ammobin-client:reloading
+    image: ammobindotca/ammobin-client
     restart: always
     networks:
        - front
