set http timeouts for everything

--- a/Caddyfile
+++ b/Caddyfile
@@ -2,6 +2,14 @@
   tls {%EMAIL%}
   gzip
   push
+ 
+  timeouts {
+    read   5s
+    header 5s
+    write  5s
+    idle   1m
+  }
+
   proxy / client:3000 https://ammobin.now.sh https://ammobin-client.herokuapp.com https://ammobin.netlify.com https://ammobin.surge.sh {
     policy first
     fail_timeout 1s
