--- a/Caddyfile
+++ b/Caddyfile
@@ -42,7 +42,7 @@
     # Disallow the site to be rendered within a frame (clickjacking protection)
     X-Frame-Options "DENY"
 
-    Content-Security-Policy-Report-Only "default-src 'self';script-src 'self' 'unsafe-inline' https://storage.googleapis.com; connect-src  'self';  style-src 'self' 'unsafe-inline';img-src 'self';  report-uri https://{%SITE%}/api/content-security-report-uri"
+    Content-Security-Policy "default-src 'self';script-src 'self' 'unsafe-inline' https://storage.googleapis.com; connect-src  'self';  style-src 'self' 'unsafe-inline';img-src 'self';  report-uri https://{%SITE%}/api/content-security-report-uri"
     Referrer-Policy "origin"
   }
 
