--- a/Caddyfile
+++ b/Caddyfile
@@ -11,7 +11,7 @@
   }
 
   # https://ammobin.now.sh (out of date)
-  proxy / client:3000  https://ammobin-client.herokuapp.com https://ammobin.netlify.com https://ammobin.surge.sh {
+  proxy / client:3000  https://ammobin-client.herokuapp.com https://ammobin.netlify.com  {
     policy first
     fail_timeout 1s
     max_fails 5
