--- a/redis.conf
+++ b/redis.conf
@@ -100,7 +100,7 @@ tcp-keepalive 60
 # verbose (many rarely useful info, but not a mess like the debug level)
 # notice (moderately verbose, what you want in production probably)
 # warning (only very important / critical messages are logged)
-loglevel notice
+loglevel warning
 
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
@@ -144,8 +144,9 @@ databases 16
 #
 #   save ""
 
-save 900 1
-save 300 10
+save 3600 1
+save 900 10
+save 300 100
 save 60 10000
 
 # By default Redis will stop accepting writes if RDB snapshots are enabled
@@ -167,7 +168,7 @@ stop-writes-on-bgsave-error no
 # For default that's set to 'yes' as it's almost always a win.
 # If you want to save some CPU in the saving child set it to 'no' but
 # the dataset will likely be bigger if you have compressible values or keys.
-rdbcompression yes
+rdbcompression no
 
 # Since version 5 of RDB a CRC64 checksum is placed at the end of the file.
 # This makes the format more resistant to corruption but there is a performance
