added bulk chunk size

--- a/fluentd.conf
+++ b/fluentd.conf
@@ -34,7 +34,7 @@
   default_elasticsearch_version 6
   reload_on_failure true
   buffer_chunk_limit 2m
-
+  bulk_message_request_threshold 2m
   <buffer>
     @type file
     path /fluentd/log/buffer
